# AAT.Abby.Win64

./: .gitignore  BUILD.bazel  CLAUDE.md  CMakeLists.txt
src/: CMakeLists.txt  README.md
src/abby/: BUILD.bazel  CMakeLists.txt  README.md  app_browser_impl.cc  app_renderer_impl.cc  client_impl.cc  client_impl.h  client_structs.h  constants.h  media_query.cc  media_query.h  raw_javascript.cc  raw_javascript.h  resource_util_win_impl.cc
src/abby/data_access/: CMakeLists.txt  README.md  cmake_install.cmake  dbaccess.cpp  dbaccess.h
src/abby/data_access/DataAccess.dir/Debug/: DataAccess.lib.recipe  dbaccess.cpp.ifc.dt.d.json  dbaccess.cpp.ifc.dt.module.json  dbaccess.cpp.ifc.dt.module.json.command
src/abby/data_access/DataAccess.dir/Debug/DataAccess.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  DataAccess.lastbuildstate
src/abby/linux/: BUILD.bazel
src/abby/mac/: BUILD.bazel
src/abby/win/: BUILD.bazel  resource.rc
src/minimal/: BUILD.bazel  CMakeLists.txt  app_browser_minimal.cc  app_other_minimal.cc  app_renderer_minimal.cc  client_minimal.cc  main_minimal.cc  process_helper_mac_minimal.cc  resource_util_win_impl.cc
src/minimal/linux/: BUILD.bazel
src/minimal/mac/: BUILD.bazel
src/minimal/win/: BUILD.bazel  resource.rc
src/shared/: BUILD.bazel  CMakeLists.txt  README.md  browser_util.cc  client_manager.cc  client_util.cc  client_util_linux.cc  client_util_mac.mm  client_util_win.cc  main_linux.cc  main_mac.mm  main_util.cc  main_win.cc  process_helper_mac.cc  resource_util.cc  resource_util_linux.cc  resource_util_mac.mm  resource_util_posix.cc  resource_util_win.cc
src/shared/win/: shared.rc
